[project]
name = "ai-sdr"
version = "0.1.0"
description = "Autonomous AI Sales Development Representative"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Agent framework
    "crewai[tools]>=0.86.0",
    "litellm>=1.50.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # CRM
    "simple-salesforce>=1.12.0",
    # Email
    "sendgrid>=6.11.0",
    "resend>=2.0.0",
    # Web scraping
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    # Background jobs
    "arq>=0.26.0",
    "redis>=5.2.0",
    # Notifications
    "slack-sdk>=3.33.0",
    # Utilities
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
ui = [
    "streamlit>=1.40.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
